odevzdani/tests/invalid_sem/def/def03.java
class Main {
    static void Run() {
        int b;
    }
}
